# fitmeai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  about_me.md  docker-compose.yml  export_tokens.py  main.py  main_noauth.py  pyproject.toml  run_bot.py  setup_oauth.py
.claude/skills/daily-menu/: SKILL.md
.claude/skills/meal-planner/: SKILL.md
.claude/skills/nutrition-analysis/: SKILL.md
.claude/skills/quick-log/: SKILL.md
.claude/skills/weekly-report/: SKILL.md
.claude/skills/weight-dynamics/: SKILL.md
.claude/skills/workout-analysis/: SKILL.md
.claude/skills/workout-planner/: SKILL.md
docs/: IMPLEMENTATION_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  STATUS.md  authentication.md  setup.md  tools_reference.md
docs/superpowers/plans/: 2026-03-28-nutrition-agent.md
docs/superpowers/specs/: 2026-03-28-nutrition-agent-design.md
examples/: search_foods.py  track_meal.py
memory/: MEMORY.md  corrections.md  eating_patterns.md  favorite_foods.md  weekly_insights.md
nutrition_agent/: agent.py  bot.py  config.py
nutrition_agent/handlers/: commands.py  photo.py  text.py  utils.py  voice.py
nutrition_agent/services/: barcode.py  session_manager.py  whisper.py
src/fatsecret_mcp/: Untitled  __init__.py  config.py  server.py
src/fatsecret_mcp/api/: __init__.py  base_client.py  date_utils.py  exercise.py  food_diary.py  foods.py  recipes.py  weight.py
src/fatsecret_mcp/auth/: __init__.py  credentials.py  oauth_manager.py
src/fatsecret_mcp/models/: __init__.py  diary.py  exercise.py  food.py  recipe.py  responses.py
src/fatsecret_mcp/tools/: __init__.py  diary_tools.py  exercise_tools.py  foods_tools.py  weight_tools.py
tests/: test_agent.py  test_barcode.py  test_config.py  test_integration.py  test_markdown_html.py  test_session_manager.py  test_whisper.py
(+3 files in other folders)
