[project]
name = "fatsecret-mcp"
version = "0.1.0"
description = "Model Context Protocol server for FatSecret Platform API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "FatSecret MCP", email = "example@example.com"}
]
dependencies = [
    "fastmcp>=3.0.0b1",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "claude-agent-sdk>=0.1.51",
    "aiogram>=3.26.0",
    "openai>=1.0.0",
    "pyzbar>=0.1.9",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "responses>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
